manifests/game/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  namespace: game
  labels:
    app: game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: "maindevopsdemo.azurecr.io/game@sha256:f080c9a924b4a4df04ff7b8c5576acea5308749c8c2ef73317a4434a0f4e9443"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: Always
