manifests/game/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game
  namespace: game
spec:
  selector:
    app: game
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
