manifests/game/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game
  namespace: game
  annotations:
    cert-manager.io/issuer: game-letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "game.devops-demo.reinier.co.za"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game
            port:
              number: 80
  tls:
  - hosts:
    - "game.devops-demo.reinier.co.za"
    secretName: game-tls-secret
